# auto-pr-generator

./: .editorconfig  .gitignore  .prettierignore  Cargo.toml  Dockerfile  README.md  action.yml  code2prompt.readme  entrypoint.sh  pr_template.hbs  template_output.md  test.sh
.github/workflows/: on-pr.yml
src/: lib.rs  main.rs
