[package]
name = "auto-pr"
version = "0.1.0"
edition = "2021"
description = "A GitHub Action that automatically generates high-quality pull request descriptions using Claude AI"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[dependencies]
handlebars = "4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
code2prompt = { git = "https://github.com/mufeedvh/code2prompt" }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
octocrab = "0.18"  # GitHub API client
async-trait = "0.1" 
dotenv = "0.15"